--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "cAklc2-4_hag"
       },
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_AxEco9xAAvN"
       },
@@ -132,7 +132,7 @@
           "height": 597
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1508,7 +1508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1545,7 +1545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1607,7 +1607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1654,14 +1654,14 @@
         "*   Time_of_Day - у этих значений (утро, вечер, день) есть чёткий и логичный порядок. Математические операции неприменимы.\n",
         "*   Weekday - дни недели имеют строгий порядок. Математические операции неприменимы.\n",
         "*   Month_name - с месяцами то же самое, что с днями недели.\n",
+        "*   Weekdaysort - числовое представление порядковых переменных Weekday.\n",
+        "*   Monthsort - аналогично с Weekdaysort, только для Month_name.\n",
         "\n",
         "Числовые непрерывные:\n",
         "\n",
         "\n",
         "*   hour_of_day - можно легко посчитать среднее арефмитическое, значения имеют полный математический смысл.\n",
         "*   money - то же самое, что с hour_of_day.\n",
-        "*   Weekdaysort - числовое представление порядковых переменных Weekday. Оно было специально созданы, чтобы превратить порядок в число, с которым можно работать.\n",
-        "*   Monthsort - аналогично с Weekdaysort, только для Month_name.\n",
         "\n",
         "Числовые и порядковые:\n",
         "\n",
@@ -1700,7 +1700,7 @@
     {
       "cell_type": "code",
       "source": [
-        "numeric_cols = ['hour_of_day', 'money', 'Weekdaysort', 'Monthsort']\n",
+        "numeric_cols = ['hour_of_day', 'money']\n",
         "print(df[numeric_cols].describe())"
       ],
       "metadata": {
@@ -1710,7 +1710,7 @@
         },
         "outputId": "338661ec-5fd8-4b86-f32e-85e28c112b77"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1741,7 +1741,7 @@
     {
       "cell_type": "code",
       "source": [
-        "categorical_cols = ['cash_type', 'coffee_name', 'Time_of_Day', 'Weekday', 'Month_name', 'Date', 'Time']\n",
+        "categorical_cols = ['cash_type', 'coffee_name', 'Time_of_Day', 'Weekday', 'Month_name', 'Date', 'Time', 'Weekdaysort', 'Monthsort']\n",
         "print(df[categorical_cols].describe())"
       ],
       "metadata": {
@@ -1751,7 +1751,7 @@
         },
         "outputId": "ee80a363-91f0-4c5c-e9e6-98d1bb2b1c10"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1807,7 +1807,7 @@
         },
         "outputId": "c674e7b8-5242-4f5c-ab53-b641a9515c27"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1847,7 +1847,7 @@
         "id": "PPEdw60hDoCC",
         "outputId": "8286b720-fc65-4d7b-8ca1-81b3e7a02c9b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1888,7 +1888,7 @@
         "id": "_7nGCzsJECiU",
         "outputId": "ed152718-ffb7-41be-8f59-5a9a98697ae4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1938,7 +1938,7 @@
         },
         "outputId": "8d47ddd1-3ce3-4172-8f4e-23060413dcc2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1979,7 +1979,7 @@
         "id": "ka_d8qyvG_EP",
         "outputId": "b1af6527-186e-43ce-809b-3e3857be7f05"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2020,7 +2020,7 @@
         "id": "5DfEGUGFHo35",
         "outputId": "8ff68f53-b5a4-4fd2-f82f-bbe90d004e16"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2060,7 +2060,7 @@
         "id": "4kOL48ADH_0j",
         "outputId": "9a0ec83c-31c7-44c7-8bb4-7be3108f4513"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2100,7 +2100,7 @@
         "id": "vVozZpP6IgNl",
         "outputId": "4685d701-ca71-4907-b7ad-5d5f97b38542"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2141,7 +2141,7 @@
         "id": "fW4KMf5IJFxg",
         "outputId": "a04bfb95-e617-409a-e931-020f8203984e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2192,7 +2192,7 @@
         },
         "outputId": "095e79f6-33b4-436e-9a9e-bc56dadcbe57"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
