--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -943,9 +943,9 @@
         "\n",
         "Мы будем смотреть на p-value:\n",
         "\n",
-        "* Если p-value < 0.05, между переменными есть статистически значимая связь.\n",
+        "* Если p-value < 0,05 - между переменными есть статистически значимая связь.\n",
         "\n",
-        "* Если p-value > 0.05, между переменными связи нет.\n",
+        "* Если p-value > 0,05 - между переменными связи нет.\n",
         "\n",
         "Мы проведем этот тест для Sleep Disorder и других категориальных признаков: Gender, Occupation, BMI Category."
       ],
@@ -1793,11 +1793,11 @@
       "source": [
         "Построенная модель логистической регрессии показала высокую эффективность. Ключевые метрики на тестовой выборке:\n",
         "\n",
-        "* Accuracy (общая точность): 91.2%\n",
+        "* Accuracy (общая точность): 0,91\n",
         "\n",
-        "* F1-score (баланс точности и полноты): 91.3%\n",
+        "* F1-score (баланс точности и полноты): 0,91\n",
         "\n",
-        "* ROC-AUC (качество различения классов): 0.95\n",
+        "* ROC-AUC (качество различения классов): 0,95\n",
         "\n",
         "Эти результаты подтверждают, что модель надежна и хорошо справляется с классификацией всех трех состояний: None (нет расстройства), Sleep Apnea (апноэ) и Insomnia (бессонница).\n",
         "\n",
