--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -37,7 +37,7 @@
         },
         "outputId": "8cfe1e26-64fb-4c3e-ddec-4a80247c174b"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "PWWK-Lvp2a1p"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "xGt-kON1YUur"
       },
@@ -145,7 +145,7 @@
         "id": "nSCkK1z12WvO",
         "outputId": "7c90990f-6209-439d-9bea-653e5a156610"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "9LAzDntP7eIZ"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         },
         "outputId": "7aa98359-ee4f-4bab-9051-91f64f7bc172"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "s_WrMKRx8maW"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "RqFB85xY9v2N"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "id": "vw8gI5wtBjm0",
         "outputId": "3e4eed4a-1498-44bc-d9d2-054e7ba035cb"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +455,7 @@
         "id": "R97hJNP-QJSq",
         "outputId": "1a216a04-3a7c-4b0b-a8b4-e961527cfb4b"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +534,7 @@
         "id": "F-Y6jkWjWSxa",
         "outputId": "263f6b93-f3ef-4821-8f4f-23d68757c831"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -565,7 +565,7 @@
       "metadata": {
         "id": "AE2H-jMcXtTB"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +611,7 @@
         "id": "402OsdcsX8sZ",
         "outputId": "807e2757-45c9-4648-ea6d-d4af5a5eb799"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,10 +699,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "По моему мнению, лучше подходит DBSCAN.\n",
         "\n",
-        "Для этого набора данных лучше подходит K-means. Он отлично справился с главной задачей: разделил всех людей на четыре большие и понятные группы. Мы можем легко описать каждый из этих сегментов (например, \"молодые и активные\" или \"пожилые и спокойные\"), что очень полезно для анализа.\n",
-        "\n",
-        "DBSCAN же сработал как искатель \"странностей\". Он нашел несколько очень маленьких, уникальных групп, но при этом многих людей просто назвал \"шумом\" и не отнес никуда. В итоге, мы не получаем полной картины обо всех участниках."
+        "Главное преимущество DBSCAN - его способность находить и отделять \"шум\" (точки, которые не принадлежат ни к одному плотному скоплению). Вместо того чтобы насильно включать их в ближайшую группу (как это сделал K-means), DBSCAN честно показывает, что они не являются частью какой-либо явной структуры, что дает более реалистичную картину.\n",
+        "\n"
       ],
       "metadata": {
         "id": "j1Y6EwLAcB6v"
