--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -35,9 +35,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cfe1e26-64fb-4c3e-ddec-4a80247c174b"
+        "outputId": "6c7b63dd-26d0-423a-de09-fc93b2d3b6c0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
         "from sklearn.cluster import KMeans, DBSCAN\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.neighbors import NearestNeighbors\n",
-        "from sklearn.metrics import silhouette_score, calinski_harabasz_score\n",
+        "from sklearn.metrics import silhouette_score, calinski_harabasz_score, davies_bouldin_score\n",
         "\n",
         "sns.set(style=\"whitegrid\")\n",
         "plt.rcParams['figure.figsize'] = (12, 7)"
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "PWWK-Lvp2a1p"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "xGt-kON1YUur"
       },
@@ -143,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nSCkK1z12WvO",
-        "outputId": "7c90990f-6209-439d-9bea-653e5a156610"
+        "outputId": "1cce183a-4eec-4782-d363-ec80e1fa189f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "9LAzDntP7eIZ"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -206,9 +206,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7aa98359-ee4f-4bab-9051-91f64f7bc172"
+        "outputId": "6e310a3e-6df5-40de-fd66-4965c5c65315"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "s_WrMKRx8maW"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "RqFB85xY9v2N"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -311,8 +311,10 @@
         "\n",
         "# Метрики для оценки качества кластеризации\n",
         "silhouette = silhouette_score(df_scaled, clusters)\n",
+        "dbi = davies_bouldin_score(df_scaled, clusters)\n",
         "calinski = calinski_harabasz_score(df_scaled, clusters)\n",
         "print(f\"Silhouette: {silhouette:.3f}\")\n",
+        "print(f\"Davies-Bouldin Index: {dbi:.3f}\")\n",
         "print(f\"Calinski-Harabasz: {calinski:.3f}\")\n",
         "\n",
         "# Средние значения по каждому кластеру\n",
@@ -339,15 +341,16 @@
           "height": 1000
         },
         "id": "vw8gI5wtBjm0",
-        "outputId": "3e4eed4a-1498-44bc-d9d2-054e7ba035cb"
+        "outputId": "fbf2637c-eb0b-4019-ead6-400b4cc3238a"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Silhouette: 0.414\n",
+            "Davies-Bouldin Index: 1.076\n",
             "Calinski-Harabasz: 159.480\n",
             "cluster\n",
             "2    173\n",
@@ -453,9 +456,9 @@
           "height": 657
         },
         "id": "R97hJNP-QJSq",
-        "outputId": "1a216a04-3a7c-4b0b-a8b4-e961527cfb4b"
+        "outputId": "bbcf558c-5374-4c96-9a09-7e085121e93a"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,9 +535,9 @@
           "height": 573
         },
         "id": "F-Y6jkWjWSxa",
-        "outputId": "263f6b93-f3ef-4821-8f4f-23d68757c831"
+        "outputId": "bca8cd4b-3f9a-4a6e-bf12-0954375eb1b8"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -565,7 +568,7 @@
       "metadata": {
         "id": "AE2H-jMcXtTB"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -586,7 +589,11 @@
         "if n_clusters > 1:\n",
         "    mask = clusters != -1\n",
         "    silhouette = silhouette_score(df_scaled[mask], clusters[mask])\n",
+        "    dbi = davies_bouldin_score(df_scaled[mask], clusters[mask])\n",
+        "    calinski = calinski_harabasz_score(df_scaled[mask], clusters[mask])\n",
         "    print(f\"Silhouette Score (без учета шума): {silhouette:.3f}\")\n",
+        "    print(f\"Davies-Bouldin Index: {dbi:.3f}\")\n",
+        "    print(f\"Calinski-Harabasz: {calinski:.3f}\")\n",
         "else:\n",
         "    print(\"Silhouette Score не может быть рассчитан, так как найден 1 кластер или меньше.\")\n",
         "\n",
@@ -609,9 +616,9 @@
           "height": 1000
         },
         "id": "402OsdcsX8sZ",
-        "outputId": "807e2757-45c9-4648-ea6d-d4af5a5eb799"
+        "outputId": "a88e7952-5403-4306-8369-c69bc1f504f9"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +666,9 @@
             " 4              10000.000000  3.000000             4.0  \n",
             " 5               5000.000000  0.000000             5.0  \n",
             " 6               6878.787879  0.000000             6.0  \n",
-            "Silhouette Score (без учета шума): 0.670\n"
+            "Silhouette Score (без учета шума): 0.670\n",
+            "Davies-Bouldin Index: 0.515\n",
+            "Calinski-Harabasz: 307.879\n"
           ]
         },
         {
